# MiniSynCPP

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  demo_build.cmake  docker_build.sh  install_raspi_xcompiler.sh  main.cpp  minisync.cpp  minisync.h  node.cpp  node.h  sources.list
analysis/: .gitignore  analysis.py  stats.csv
include/catch2/: catch.hpp
include/loguru/: loguru.cpp  loguru.hpp
src/: config.h  exception.cpp  exception.h  main.cpp  node.cpp  node.h  stats.cpp  stats.h
src/algorithms/: config.h  constraints.cpp  constraints.h  minisync.cpp  minisync.h
src/demo/: config.h  demo_config.h.in  exception.cpp  exception.h  main.cpp  node.cpp  node.h  stats.cpp
src/demo/net/: protocol.proto
src/libminisyncpp/: constraints.cpp  lib_config.h.in  minisync.cpp  minisync_api.cpp  minisync_api.h  pyminisyncpp_gen.cpp
src/net/: protocol.h  protocol.proto
src/python_bindings/: pyminisyncpp_gen.cpp
src/tests/: tests.cpp  tests_main.cpp
